<resources>
    <string name="app_name">Spiice</string>
    <string name="discover_platform_btn_label">Узнать больше</string>
    <string name="login_question_label">Уже есть аккаунт? Войти</string>
    <string name="skip_btn_label">Пропустить</string>
    <string name="projects_feature_description">Найдите проекты от компаний по всему миру</string>
    <string name="money_feature_description">Зарабатывайте деньги, работая над потрясающими проектами</string>
    <string name="chat_feature_description">Общайтесь с другими фрилансерами и развивайте свою сеть</string>
    <string name="level_up_feature_description">Старайтесь и повышайте свой уровень!</string>
    <string name="enjoy_feature_description">Наслаждайтесь прогрессом!</string>
    <string name="sign_up_label">Зарегистрироваться</string>
    <string name="sign_up_title">Регистрация</string>
    <string name="first_name_hint">Введите ваше имя</string>
    <string name="first_name_placeholder">Имя</string>
    <string name="last_name_placeholder">Фамилия</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Пароль</string>
    <string name="log_in_label">Войти</string>
    <string name="to_sign_up_label">Вернуться к регистрации</string>
    <string name="add_new_note">Добавить новую</string>
    <string name="sign_out">Выйти</string>
    <string name="add_note">Добавить заметку</string>
    <string name="back">Назад</string>
    <string name="title_placeholder">Заголовок</string>
    <string name="content_placeholder">Содержание</string>
    <string name="add_btn_label">Добавить</string>
    <string name="failure_note_creation_message">Во время добавления заметки произошла ошибка, попробуйте снова</string>
    <string name="fix_errors_message">Исправьте ошибки</string>
    <string name="note_undo_remove_action_label">Отменить удаление?</string>
    <string name="undo">Отменить</string>
    <string name="remove_label">Удалить</string>
    <string name="open_note_list_item_menu_label">Открыть меню</string>
    <string name="share_label">Поделиться</string>
    <string name="share_dialog_title">Поделиться заметкой через</string>
    <string name="schedule_time_label">Запланированное время заметки</string>
    <string name="schedule_btn_label">Запланировать заметку</string>
    <string name="edit_label">Изменить</string>
    <string name="note_title_preview">Заголовок:</string>
    <string name="note_content_preview">Контент:</string>
    <string name="note_create_date_preview">Дата создания:</string>
    <string name="note_schedule_date_preview">Запланирована на:</string>
    <string name="note_no_schedule_date_label">Не запланирована</string>
    <string name="auth_sign_in_error">Неправильный логин или пароль</string>
    <string name="auth_sign_up_error">Попробуйте другой email</string>
    <string name="auth_successful">Успешный вход!</string>
    <string name="notes">Заметки</string>
    <string name="all_notes">Все заметки</string>
    <string name="notes_search">Поиск заметок</string>
    <string name="notes_create">Создание заметок</string>
    <string name="profile">Профиль</string>
    <string name="delete_profile">Удалить профиль</string>
    <string name="delete_all_notes">Удалить все заметки</string>
    <string name="notes_count">%d заметки</string>
    <string name="search">Поиск</string>
    <string name="note_create_success_message">Заметка успешно сохранена</string>
    <string name="get_notes_count_error">Ошибка при получении данных о заметках</string>
    <string name="delete_profile_error">Ошибка во время удаления профиля</string>
</resources>