<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/layout_horizontal_padding">

        <TextView
            style="@style/ScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_title_margin_top"
            android:layout_marginBottom="@dimen/form_layout_subtitle_margin_bottom"
            android:text="@string/add_note" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_field_margin_bottom"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title"
                style="@style/FormField"
                android:hint="@string/title_placeholder"
                android:inputType="text" />

            <TextView
                android:id="@+id/title_error"
                style="@style/FormFieldError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_field_margin_bottom"
            android:orientation="vertical">

            <EditText
                android:id="@+id/content"
                style="@style/FormField"
                android:gravity="top"
                android:hint="@string/content_placeholder"
                android:inputType="textMultiLine"
                android:lines="@integer/note_content_field_lines_count" />

            <TextView
                android:id="@+id/content_error"
                style="@style/FormFieldError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/open_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main"
            android:text="@string/schedule_btn_label" />

        <Button
            android:id="@+id/add_note"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_note_btn_margin_top"
            android:text="@string/add_btn_label" />
    </LinearLayout>

</LinearLayout>