<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/layout_horizontal_padding">

    <TextView
        style="@style/ScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_title_margin_top"
        android:layout_marginBottom="@dimen/form_layout_subtitle_margin_bottom"
        android:text="@string/profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_layout_subtitle_margin_bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_full_name"
            style="@style/ScreenInfoTitle"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:text="Денис Мартынов" />

        <Button
            android:id="@+id/delete_profile"
            style="@style/SecondaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_profile" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/notes_count"
            style="@style/ScreenInfoTitle"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            tools:text="64 заметки" />

        <Button
            android:id="@+id/delete_all_notes"
            style="@style/SecondaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_all_notes" />
    </LinearLayout>

    <Button
        android:id="@+id/sign_out"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/form_layout_header_margin_bottom"
        android:text="@string/sign_out" />

</LinearLayout>